--- a/localisation/english/replace/deluge_poland_focuses_l_english.yml
+++ b/localisation/english/replace/deluge_poland_focuses_l_english.yml
@@ -7,7 +7,7 @@
  
  POL_continue_with_sanation:0 "The Party of Power"
  POL_continue_with_sanation_desc:0 "The government has no nobler task than to continue the work of the First Marshal. There are people who are ready to inherit the great responsibility of healing society - to inherit Sanation."
- POL_smigly_wins:0 "§REdward Rydz-Śmigły§!"
+ POL_smigly_wins:0 "Edward Rydz-Śmigły"
  POL_smigly_wins_desc:0 "Rydz-Śmigły is an ideal candidate for the role of Marshal. This is a person with experience in both the army and aviation, who is not afraid to make difficult decisions. If we want not only to protect Poland, but also to restore it to its former greatness, then we need Edward."
  POL_purge_undersirables:0 "Undesirable Elements"
  POL_purge_undersirables_desc:0 "The issue of power has been resolved, but some do not understand it or refuse to understand it. These fools need to be taught a lesson. We will grab the leaders and the most vociferous members of defeatist parties, movements and clubs for the edification of others."
@@ -25,21 +25,67 @@
  POL_start_project_in_kashubia_desc:0 "Having regained the Kashubian lands, we faced local resistance, mainly German. But we will give them a choice: let them either return to the west to their barbaric lands, or keep quiet. We will allow those who behave well to integrate into Polish culture. In a couple of generations..."
  POL_start_project_in_germany:0 "The Project in Germany"
  POL_start_project_in_germany_desc:0 "The heart of Prussia is in our hands! Now our Government faces a difficult task to pacify these wild lands. In order to undermine the German spirit, we will take out all valuables, machines and raw materials, as well as assign their property to Polish big business."
- POL_start_project_in_north_east:0 "Start Project in North-East"
- POL_start_project_in_north_east_desc:0 "Next to our borders with Belarus and Livonia there are minorities of Belarusians and Lithuanians that want local autonomy. Instead of giving them autonomy we give them "new work"."
- POL_continue_project_in_lithuania:0 "Continue Project in Lithuania"
- POL_continue_project_in_lithuania_desc:0 "The Lithuanians are subjugated by us now. We can use them to make our country more prosperous."
- POL_continue_project_in_belarus:0 "Continue Project in Belarus"
- POL_continue_project_in_belarus_desc:0 "Belarusians are too long calling themselves a "nation". It ended politically and soon will culturally and genetically."
- POL_start_project_in_south_east:0 "Start Project in South-East"
- POL_start_project_in_south_east_desc:0 "We shall motivate Ukrainians living in our eastern lands to “help” us in building our war machine."
- POL_continue_project_in_ukraine:0 "Continue Project in Ukraine"
- POL_continue_project_in_ukraine_desc:0 "We conquered more of Ukraine, so we need more of them to "help" us. After they will become useless we will "utilize" them and create new living space for Polish people!"
- POL_project_is_finished:0 "Project is Finished"
- POL_project_is_finished_desc:0 "Finally our living space has been increased and we have our little workers to "help" us expand it further as we wish. But the main objectives of our project has been achieved."
+ POL_start_project_in_north_east:0 "The Project in the North-East"
+ POL_start_project_in_north_east_desc:0 "There are many ethnic minorities living on our fringes with Livonia and Belarus. By teaching children in schools in their own languages, these small communities divide our people and distance themselves from the state. If they want to live in Poland, then they should be kind enough to speak Polish."
+ POL_continue_project_in_lithuania:0 "The Project in Lithuania"
+ POL_continue_project_in_lithuania_desc:0 "Lithuania is once again united with the Polish state. Unfortunately, the years of independence and the Red Terror turned Lithuanians against us. They have forgotten our common history and culture, but we will be glad to remind them."
+ POL_continue_project_in_belarus:0 "The Project in Belarus"
+ POL_continue_project_in_belarus_desc:0 "The Belarusian statehood is truly ridiculous. But now that historical justice has prevailed, we can return Polish identity to this region. But first we will have to get out of the way the bandits who annoy our administration."
+ POL_start_project_in_south_east:0 "The Project in the South-East"
+ POL_start_project_in_south_east_desc:0 "The Ukrainian people living on our territory do not associate themselves with our great state, which is extremely outrageous. It's time to act tough — we will restrict the use of the Ukrainian language in the press, the education system and cultural events."
+ POL_continue_project_in_ukraine:0 "The Project in Ukraine"
+ POL_continue_project_in_ukraine_desc:0 "Embittered by the whole world, Ukrainian anarchists are no longer in power. We will bring prosperity to this rich land that was once ours. The locals are planned to be used as labor and servants, and their means of production will be distributed among our companies."
+ POL_project_is_finished:0 "Finish the Project"
+ POL_project_is_finished_desc:0 "Our polonization project is nearing completion. And although a lot of police and military resources have been spent, the results of the Purification will be an increase in profits, manpower and loyalty to the authorities. And now let's destroy all unnecessary evidence and reports related to the actions of Polish soldiers in our new territories..."
+ POL_contact_nationalist_radicals:0 "National Radicalism"
+ POL_contact_nationalist_radicals_desc:0 "The teachings of radical extremists and the state are incompatible. However, there are those in the ranks of the Reds who do not want the overthrow of our power, but its power, although they interpret it differently. We can use these misguided ones by putting pressure on their patriotic feelings."
+ POL_force_atheism:0 "State Atheism"
+ POL_force_atheism_desc:0 "As they say, religion is the opiate of the masses. Poles are too keen on believing in postulates that are hundreds of years old, like addicts. This does not bring any benefit to the state. We will launch a large anti-religious campaign aimed primarily at the younger generation."
+ POL_nationalise_churches:0 "Nationalization of Churches"
+ POL_nationalise_churches_desc:0 "If at the beginning of time religion played an educational role, then in the age of machines and electricity it is exceptionally destructive. If we deprive religion of its main food base — churches, we will stop the obscurantism that has lasted for centuries. Everyone should realize that there is no God, there is only Poland and the Marshal!"
+ POL_create_ozn:0 "Camp of National Unity"
+ POL_create_ozn_desc:0 "After we have cut religion out of the body of society, it is necessary to instill new values in people. These will be the values of the new order, which Adam Koc's Camp of National Unity will help us achieve. These guys are fresh and eager to fight, they will stand to the death for our new state."
+ POL_ensure_complete_political_dominance:0 "Political Purity"
+ POL_ensure_complete_political_dominance_desc:0 "It was only necessary to face the issue of power, as comrades in Sanation such as Walery Sławek and Władysław Sikorski ceased to be comrades. To complete the picture of a united and ready Poland, it is necessary to eliminate the main opposition elements that do not cooperate with the Marshal."
+ POL_disband_secret_societies:0 "Disband Secret Societies"
+ POL_disband_secret_societies_desc:0 "Masons and other secret Jewish groups pose a great danger to our country — many of them infiltrated our previous government and now they want to get this one! They should be banned, and the most influential arrested."
+ POL_massive_propaganda_efforts:0 "The Ultimate Truth"
+ POL_massive_propaganda_efforts_desc:0 "Just posters and newspapers are not enough, we need to completely rebuild the information space. We will introduce new materials into the school curriculum, create television and radio broadcasts, even theaters and exhibitions will be politically engaged. The voice of truth must be heard from everywhere."
+ POL_teach_about_etatism:0 "Etatism"
+ POL_teach_about_etatism_desc:0 "It is unthinkable that foreign companies should take a share in the Polish economy, otherwise it is not our economy at all. It is necessary to develop national capital that can compete with the rest of the world. But since it will take years to cultivate the new bourgeoisie, it is possible to achieve quick results by appropriating the property of others."
+ POL_create_sm_ozn:0 "Youth Duty"
+ POL_create_sm_ozn_desc:0 "Youth Duty is a youth organization of the CNP. It tells its wards about traditional family and patriotic values, as well as the importance of the army and the Marshal himself. It also prepares them to serve their fatherland — boys to become warriors, and girls to become mothers."
+ POL_create_opw_ozn:0 "Camp of Fighting Poland"
+ POL_create_opw_ozn_desc:0 "If the enemy sets foot on our land, both old and young will fight for their native land until our glorious army expels the foe back home. A paramilitary and covert organization will help us in this, which will train the civilian population for combat operations and support agent networks in the occupied territories."
+ POL_abolish_monarchy:0 "Abolish Monarchy"
+ POL_abolish_monarchy_desc:0 "The monarchy as a form of government is clumsy and ineffective, it is obvious why it does not suit our young state. We will eliminate all monarchical and regency institutions that drag our thinking and way of life back to the past. Poland has only one ruler, and that is our glorious Marshal!"
+ POL_cult_of_new_marshal:0 "Marshal's Party"
+ POL_cult_of_new_marshal_desc:0 "It should be clear to everyone that the old Sanation has been reborn in our wise marshal. He is our protector and patron, who has taken upon himself the burden of leading the country to greatness, and we will honorably accompany him in this noble cause. From now on and forever: Poland is a Sanation, Sanation is a Marshal!"
+ POL_use_futurists:0 "Futurism"
+ POL_use_futurists_desc:0 "The futurism movement has become widespread in Poland. These people find themselves striving to reflect in their works the acceleration of the pace of life and the industrialization of the milieu as signs of a new era. Based on this, we can conclude that we are not so different, let's find a common language with them."
+ POL_nuz_w_bzuhu_smigly:0 "Nuż w Bżuhu"
+ POL_nuz_w_bzuhu_smigly_desc:0 "Nuż w bżuhu is a magazine in which many futurist creators publish their... art. No matter how we treat them, their unusual vision of the world largely coincides with ours, so we could use their information resource for our own purposes."
+ POL_purge_futurists:0 "Traditional Art"
+ POL_purge_futurists_desc:0 "All these avant-gardists are unhealthy people! Not only is it impossible to understand their work, but, most importantly, they are pushing against the traditional way of our society, which goes against our policy. It is necessary to purify art from the harmful influence of futurism and other similar trends."
+ POL_concessions_to_christians:0 "Concessions to Christians"
+ POL_concessions_to_christians_desc:0 "Perhaps we overreacted with the church reform. After all, Christianity is a conservative religion that can help keep society from falling into anarchy, and that's exactly what we need right now. So why not make some concessions?"
+ 
+ POL_cult_of_old_marshal:0 "The Cult of the First Marshal"
+ POL_cult_of_old_marshal_desc:0 "Our people will never forget the First Marshal Józef Piłsudski, the great military commander and regent of the Polish state. We will perpetuate the memory of this man and preserve everything that was created by him. He will become the national symbol of the country and we will carry his name through the centuries."
+ POL_mobilize_the_masses:0 "Mobilize the Masses"
+ POL_mobilize_the_masses_desc:0 "The advantage of mobilization is that every person will be involved in the mechanism of the state, and our economy will find a clear goal and will not become a victim of any crisis. Thus, our power will turn into a military camp, where everyone will know their orders and not ask unnecessary questions."
+ POL_state_that_gives:0 "The Welfare State"
+ POL_state_that_gives_desc:0 "What kind of army can there be on the scale of the whole country if it is without proper support? Improving the quality of education and healthcare is our priority. We will succeed only by high standards!"
+ POL_crush_decadency:0 "Crush Decadence"
+ POL_crush_decadency_desc:0 "We have already inspired people enough to work for the common good, but there is something that hinders — this is a nationwide mood of decline. Cultural emptiness is very common, and even worse, it can be filled with immoralism, individualism. We need to stop the penetration of Western rot into our lives."
+ POL_fund_galleries_of_patriotic_art:0 "Patriotic Art Galleries"
+ POL_fund_galleries_of_patriotic_art_desc:0 "It is possible to awaken mass consciousness with a new direction in art. A series of patriotic posters and the sponsorship of our artists will spur public sentiment. These works should inspire pride to us, and trembling to the enemies."
+ 
+ POL_sikorski_wins:0 "Władysław Sikorski"
+ POL_sikorski_wins_desc:0 "Although Władysław was not a friend of our beloved Marshal, but he has zeal, and most importantly talent. He is a diligent officer and a true patriot. Who, if not him, will be able to protect our Poland from the tornado of uncertainty that is now dragging the world?"
  
  POL_oppose_sanation:0 "Oppose Sanation"
- POL_oppose_sanation_desc:0 "Piłsudski's quasi-presidential regime is nothing without him. Already, a struggle for the right to be a dictator is raging among his supporters. Let's not wait for the military to arrange terror!"
+ POL_oppose_sanation_desc:0 "Piłsudski's quasi-regency regime is nothing without him. Already, a struggle for the right to be a dictator is raging among his supporters. Let's not wait for the military to arrange terror!"
  
  ###MILITARY TREE###
  
