--- a/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
+++ b/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
@@ -25,21 +25,67 @@
  POL_start_project_in_kashubia_desc:0 "Вернув себе кашубские земли, мы столкнулись с местным сопротивлением, в основном с немецким. Но мы дадим им выбор: пусть либо возвращаются на запад в свои варварские земли, либо помалкивают. Тем, кто будет себя хорошо вести, мы позволим интегрироваться в польскую культуру. Через пару поколений..."
  POL_start_project_in_germany:0 "Проект в Германии"
  POL_start_project_in_germany_desc:0 "Сердце Пруссии в наших руках! Теперь перед нашим правительством стоит непростая задача по усмирению этих диких земель. Чтобы подорвать немецкий дух, мы вывезем все ценности, станки и сырьё, а также присвоим их собственность польскому крупному бизнесу."
- POL_start_project_in_north_east:0 "Start Project in North-East"
- POL_start_project_in_north_east_desc:0 "Next to our borders with Belarus and Livonia there are minorities of Belarusians and Lithuanians that want local autonomy. Instead of giving them autonomy we give them "new work"."
- POL_continue_project_in_lithuania:0 "Continue Project in Lithuania"
- POL_continue_project_in_lithuania_desc:0 "The Lithuanians are subjugated by us now. We can use them to make our country more prosperous."
- POL_continue_project_in_belarus:0 "Continue Project in Belarus"
- POL_continue_project_in_belarus_desc:0 "Belarusians are too long calling themselves a "nation". It ended politically and soon will culturally and genetically."
- POL_start_project_in_south_east:0 "Start Project in South-East"
- POL_start_project_in_south_east_desc:0 "We shall motivate Ukrainians living in our eastern lands to “help” us in building our war machine."
- POL_continue_project_in_ukraine:0 "Continue Project in Ukraine"
- POL_continue_project_in_ukraine_desc:0 "We conquered more of Ukraine, so we need more of them to "help" us. After they will become useless we will "utilize" them and create new living space for Polish people!"
- POL_project_is_finished:0 "Project is Finished"
- POL_project_is_finished_desc:0 "Finally our living space has been increased and we have our little workers to "help" us expand it further as we wish. But the main objectives of our project has been achieved."
+ POL_start_project_in_north_east:0 "Проект на северо-востоке"
+ POL_start_project_in_north_east_desc:0 "На нашем пограничье с Ливонией и Беларусью проживает много этнических меньшинств. Обучая детей в школах на своих языках, эти мелкие сообщества разобщают наш народ и отдаляются от государства. Если они хотят жить в Польше, то пусть будут любезны говорить на польском языке."
+ POL_continue_project_in_lithuania:0 "Проект в Литве"
+ POL_continue_project_in_lithuania_desc:0 "Литва снова едина с польским государством. К сожалению, годы независимости и красного террора настроили литовцев против нас. Они позабыли нашу общую историю и культуру, но мы будем рады напомнить."
+ POL_continue_project_in_belarus:0 "Проект в Беларуси"
+ POL_continue_project_in_belarus_desc:0 "Белорусская государственность воистину смешна. Но теперь, когда историческая справедливость восторжествовала, мы можем вернуть в этот регион польскую идентичность. Но сперва придётся убрать с пути бандитов, досаждающих нашей администрации."
+ POL_start_project_in_south_east:0 "Проект на юго-востоке"
+ POL_start_project_in_south_east_desc:0 "Проживающий на нашей территории украинский народ не ассоциирует себя с нашим великим государством, что крайне возмутительно. Пора действовать жёстко — мы ограничим использование украинского языка в печати, системе просвещения и культурных мероприятиях."
+ POL_continue_project_in_ukraine:0 "Проект в Украине"
+ POL_continue_project_in_ukraine_desc:0 "Озлобленные на весь мир украинские анархисты теперь не у власти. Мы принесём процветание в этот богатый край, который когда-то был нашим. Местных же планируется использовать как рабочую силу и прислугу, а их средства производства будут распределены между нашими компаниями."
+ POL_project_is_finished:0 "Завершить проект"
+ POL_project_is_finished_desc:0 "Наш проект полонизации близится к завершению. И хотя было затрачено много полицейских и военных ресурсов, результами «Очищения» станут прирост прибыли, живой силы и лояльности к властям. А теперь давайте уничтожим все ненужные свидетельства и отчётности, связанные с действиями польских солдат на наших новых территориях..."
+ POL_contact_nationalist_radicals:0 "Национальный радикализм"
+ POL_contact_nationalist_radicals_desc:0 "Учения радикальных экстремистов и государство несовместимы. Однако в рядах красных есть те, кто не желает низвержения нашей державы, но его могущества, хоть они и по-разному его интерпретируют. Мы можем использовать этих заблудших, надавив на их патриотические чувства."
+ POL_force_atheism:0 "Государственный атеизм"
+ POL_force_atheism_desc:0 "Как говорится, религия — опиум для народа. Поляки слишком увлечены верой в постулаты, которым сотни лет, словно зависимые. Для государства это не приносит никакой пользы. Мы развернём масштабную антирелигиозную кампанию, нацеленную прежде всего на подрастающее поколение."
+ POL_nationalise_churches:0 "Национализация церквей"
+ POL_nationalise_churches_desc:0 "Если в начале времён религия играла просветительскую роль, то в век машин и электричества она исключительно деструктивна. Если мы лишим религию её основной кормовой базы — церквей, мы остановим мракобесие, длившееся веками. Все должны осознать, что бога нет, есть только Польша и маршал!"
+ POL_create_ozn:0 "Лагерь национального объединения"
+ POL_create_ozn_desc:0 "После того, как мы вырезали религию из тела общества, требуется привить людям новые ценности. Это будут ценности нового порядка, добиться которого нам поможет Лагерь национального объединения Адама Коца. Эти ребята свежи и рвутся в бой, они будут стоять насмерть за наше новое государство."
+ POL_ensure_complete_political_dominance:0 "Политическая чистота"
+ POL_ensure_complete_political_dominance_desc:0 "Стоило только столкнуться с вопросом власти, как товарищи по Санации, такие как Валерий Славек и Владислав Сикорский, перестали быть товарищами. Чтобы завершить картину сплочённой и готовой Польши, нужно устранить основные оппозиционные элементы, которые не сотрудничают с маршалом."
+ POL_disband_secret_societies:0 "Распустить тайные общества"
+ POL_disband_secret_societies_desc:0 "Масоны и другие тайные еврейские группировки представляют большую опасность для нашей страны — многие из них проникли в наше предыдущее правительство и теперь они хотят заполучить это! Их нужно запретить, а самых влиятельных арестовать."
+ POL_massive_propaganda_efforts:0 "Истина в последней инстанции"
+ POL_massive_propaganda_efforts_desc:0 "Просто плакатов и газет недостаточно, нам нужно полностью перестроить информационное пространство. Мы введём новые материалы в школьную программу, создадим телевизионные передачи и радиотрансляции, даже театры и выставки будут политически ангажированы. Глас правды должен быть слышен отовсюду."
+ POL_teach_about_etatism:0 "Этатизм"
+ POL_teach_about_etatism_desc:0 "Немыслимо, чтобы долю в польской экономике занимали иностранные компании, иначе это уже вовсе не наша экономика. Необходимо развивать национальный капитал, который сможет конкурировать со всем остальным миром. Но так как на взращивание новой буржуазии уйдут годы, добиться скорых результатов можно присвоением собственности других."
+ POL_create_sm_ozn:0 "«Служение молодежи»"
+ POL_create_sm_ozn_desc:0 "«Служение молодежи» — юношеская организация ЛНО. Она рассказывает своим подопечным о традиционных семейных и патриотических ценностях, а также о важности армии и самого маршала. Это также готовит их к служению своему отечеству — мальчиков к тому, чтобы стать воинами, а девочек — матерями."
+ POL_create_opw_ozn:0 "Лагерь сражающейся Польши"
+ POL_create_opw_ozn_desc:0 "Если враг ступит на нашу землю, и стар, и млад будут биться за родную землю, пока наша славная армия не изгонит недруга восвояси. В этом нам поможет военизированная и законспирированная организация, которая будет проводить подготовку гражданского населения к боевым действиям и поддерживать агентурные сети на захваченых территориях."
+ POL_abolish_monarchy:0 "Упразднить монархию"
+ POL_abolish_monarchy_desc:0 "Монархия как форма правления топорна и неэффективна, очевидно, почему она не подходит нашему молодому государству. Мы ликвидируем все монархические и регентские институты, которые тянут наше мышление и образ жизни назад в прошлое. У Польши есть лишь один правитель, и это наш славный маршал!"
+ POL_cult_of_new_marshal:0 "Партия маршала"
+ POL_cult_of_new_marshal_desc:0 "Всем должно быть ясно, что старая Санация переродилась в нашем мудром маршале. Он наш защитник и покровитель, который взял на себя ношу вести страну к величию, и мы с честью будем сопровождать его в этом благородном деле. Отныне и навсегда: Польша — это Санация, Санация — это маршал!"
+ POL_use_futurists:0 "Футуризм"
+ POL_use_futurists_desc:0 "В Польше стало распространено движение футуризма. Эти люди находят себя в стремлении отразить в своих произведениях ускорение темпа жизни и индустриализацию среды как приметы новой эры. Исходя из этого, можно сделать вывод, что мы не такие разные, давайте найдём с ними общий язык."
+ POL_nuz_w_bzuhu_smigly:0 "Nuż w bżuhu"
+ POL_nuz_w_bzuhu_smigly_desc:0 "Nuż w bżuhu — журнал, в котором многие творцы-футуристы публикуют своё... искусство. Как бы мы к ним не относились, их необычное видение мира во многом совпадает с нашим, поэтому мы могли бы использовать их информацинный ресурс в своих целях."
+ POL_purge_futurists:0 "Традиционное искусство"
+ POL_purge_futurists_desc:0 "Все эти авангардисты есть люди нездоровые! Мало того, что понять их творчество невозможно, но, самое главное, они напирают на традиционный уклад нашего общества, что идёт вразрез с проводимой нами политикой. Нужно очистить искусство от пагубного влияния футуризма и прочих подобных течений."
+ POL_concessions_to_christians:0 "Уступки христианам"
+ POL_concessions_to_christians_desc:0 "Возможно, мы погорячились с церковной реформой. В конце концов, христианство — консервативная религия, которая может помочь удержать общество от падения в анархию, а это именно то, что нам сейчас нужно. Так почему бы не пойти на некоторые уступки?"
+ 
+ POL_cult_of_old_marshal:0 "Культ первого маршала"
+ POL_cult_of_old_marshal_desc:0 "Наш народ никогда не забудет первого маршала Юзефа Пилсудского — великого военачальника и регента государства Польского. Мы увековечим память об этом человеке и сохраним всё, что было им создано. Он станет национальным символом страны, и мы пронесём его имя через столетия."
+ POL_mobilize_the_masses:0 "Мобилизовать массы"
+ POL_mobilize_the_masses_desc:0 "Плюс мобилизации в том, что каждый человек будет задействован в механизме государства, а наша экономика обретёт ясную цель и не станет жертвой ни одного кризиса. Таким образом, наша держава превратится в военный лагерь, где каждый будет знать свой приказ и не задавать лишних вопросов."
+ POL_state_that_gives:0 "Государство всеобщего благосостояния"
+ POL_state_that_gives_desc:0 "Какая может быть армия масштаба всей страны, если она будет без надлежащего обеспечения? Повышение качества образования и здравоохранения является нашей приоритетной задачей. Мы добьёмся успеха лишь высокими стандартами!"
+ POL_crush_decadency:0 "Сокрушить декаданс"
+ POL_crush_decadency_desc:0 "Мы уже достаточно воодушевили людей на работу на всеобщее благо, однако есть то, что мешает — это всенародное настроение упадка. Очень распространена культурная пустота, а что ещё хуже, она может быть заполнена имморализмом, индивидуализмом. Нужно пресечь проникновение западной гнили в нашу жизнь."
+ POL_fund_galleries_of_patriotic_art:0 "Галереи патриотического искусства"
+ POL_fund_galleries_of_patriotic_art_desc:0 "Пробудить массовое сознание возможно новым направлением в искусстве. Серия патриотических плакатов и спонсирование наших художников подстегнёт общественный настрой. Эти произведения должны внушать гордость нам, а трепет врагам."
+ 
+ POL_sikorski_wins:0 "Владислав Сикорский"
+ POL_sikorski_wins_desc:0 "Хоть Владислав не был другом нашего любимого маршала, но у него есть рвение, а самое главное талант. Он прилежный офицер и настоящий патриот. Кто, если не он, сможет уберечь нашу Польшу от смерча неопредёленности, что сейчас затягивает мир?"
  
  POL_oppose_sanation:0 "Противостоять Санации"
- POL_oppose_sanation_desc:0 "Квазипрезидентский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
+ POL_oppose_sanation_desc:0 "Квазирегентский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
  
  ###ВОЕННОЕ ДРЕВО###
  
@@ -128,7 +174,7 @@
  POL_subject_NBP:0 "Национальный банк Польши — Контроль"
  POL_subject_NBP_desc:0 "Если мы стремимся полностью обрести контроль над экономикой страны, то лучше всего расставить «правильных» людей на значимые посты в Национальном банке, которые будут следовать указаниям правительства."
  POL_support_krolewiec:0 "Деньги в Крулевец"
- POL_support_krolewiec_desc:0 "Крулевец уже в течение десятилетий находится в составе польского государства и является важным звеном для контакта с остальным миром. Мы продолжим инвестировать в этот город, чтобы увеличить пропускную способность его портов и стимулировать торговлю."
+ POL_support_krolewiec_desc:0 "Крулевец уже в течение десятилетий находится в составе Польского государства и является важным звеном для контакта с остальным миром. Мы продолжим инвестировать в этот город, чтобы увеличить пропускную способность его портов и стимулировать торговлю."
  POL_give_free_hand_to_NBP:0 "Национальный банк Польши — Автономия"
  POL_give_free_hand_to_NBP_desc:0 "Национальному банку виднее как распоряжаться своими ресурсами. Мы постараемся, чтобы мнение правительства было принято во внимание, однако прямое вмешательство породит ненужное для нас бремя."
  POL_support_gdansk:0 "Деньги в Гданьск"
