--- a/localisation/english/factions_l_english.yml
+++ b/localisation/english/factions_l_english.yml
@@ -6,3 +6,4 @@
  Visegrad_Group:0 "Visegrád Group"
  Paris_Accords:0 "Paris Accords"
  Republican_International:0 "Republican International"
+ Revolutionary_Commonwealth:0 "Revolutionary Commonwealth"
